--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
  padding: 0;
  margin: 0;
  outline: none;
+ font-synthesis: none;
+ text-rendering: optimizeLegibility;
+ -webkit-font-smoothing: antialiased;
+ -moz-osx-font-smoothing: grayscale;
 }
 
 
@@ -10,16 +14,8 @@ body {
  display: flex;
  flex-direction: column;
  align-items: center;
+ color: var(--text-color);
+ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+ background-color: var(--bg-color);
 }
 
-.flex-center {
- display: flex;
- align-self: center;
- justify-content: center;
-}
-
-.flex-col-center {
- display: flex;
- flex-direction: column;
- align-items: center;
-}
