--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,30 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --text-color: rgb(240, 240, 240);
+  --bg-color: rgb(5, 5, 5);
+  --shade: rgb(15, 15, 15);
+}
+
+
+/*** essential classess starts ***/
+.flex-center {
+ display: flex;
+ align-self: center;
+ justify-content: center;
+}
+
+.flex-col-center {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+/*** essential classes ends ***/
+
+
+
+@media (prefers-color-scheme: light ) {
+ :root {
+  --text-color: rgb(20, 20, 20);
+  --bg-color: rgb(245, 245, 255);
+  --shade: rgb(234, 234, 244);
+ }
 }
