--- a/src/App.css
+++ b/src/App.css
@@ -18,14 +18,22 @@ body {
  background-color: var(--bg-color);
 }
 
+header,
 nav,
 main {
- width: 100%;
+ width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center:
 }
 
+section {
+ width: 90%;
+ display: flex;
+ flex-direction: column;
+ align-self: center;
+ padding: 1rem 5%;
+}
 
 /*** essential classess starts ***/
 .flex-center {
