--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
+/*** imported Montserrat font ***/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+/*** imported Nunito font ***/
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
+
 * {
  padding: 0;
  margin: 0;
  outline: none;
- font-synthesis: none;
- text-rendering: optimizeLegibility;
- -webkit-font-smoothing: antialiased;
- -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -14,7 +18,7 @@ body {
  flex-direction: column;
  align-items: center;
  color: var(--text-color);
- font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+ font-family: Nunito;
  background-color: var(--bg-color);
 }
 
@@ -24,16 +28,24 @@ main {
  width: 100vw;
  display: flex;
  flex-direction: column;
- align-items: center:
+ align-items: center;
 }
 
 section {
- width: 90%;
+ width: 88%;
  display: flex;
  flex-direction: column;
  align-self: center;
- padding: 1rem 5%;
+ padding: 1rem 6%;
 }
+
+h1,
+h2,
+h3,
+h4 {
+ font-family: Montserrat;
+}
+
 
 /*** essential classess starts ***/
 .flex-center {
