--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -54,3 +54,28 @@
  .categories-section {
   margin-top: 2rem;
  }
+ 
+.mySwiper {
+  width: 100%;
+  height: 18rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mySwiper .swiper-slide {
+  width: 12rem;
+  height: 16.5rem;
+  background-color: var(--shade);
+  border-radius: 1rem;
+  transition: all 0.3s ease-in-out;
+  opacity: 0.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mySwiper .swiper-slide-active {
+  transform: scale(1.1);
+  opacity: 1;
+}
