--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -79,3 +79,22 @@
   transform: scale(1.1);
   opacity: 1;
 }
+
+.tabs {
+ width: 100%;
+ height: 4rem;
+ gap: 1rem;
+ overflow-x: auto;
+ margin-top: 1rem;
+}
+
+.tabs button {
+ width: auto;
+ min-width: 6rem;
+ height: 2.5rem;
+ color: var(--text-color);
+ font-family: Nunito;
+ background-color: transparent;
+ border: none;
+ border-radius: .8rem;
+}
