--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
  flex-direction: column;
  align-items: center;
  color: var(--text-color);
- font-family: Nunito;
+ font-family: 'Nunito Sans';
  background-color: var(--bg-color);
 }
 
@@ -62,7 +62,7 @@ h4 {
 
 .flex-between {
  display: flex;
- align-self: center;
+ align-items: center;
  justify-content: space-between;
 }
 /*** essential classes ends ***/
