--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -36,7 +36,7 @@
 /*** Recommendation section tyling starts here ***/
  .recommendation-section h2 {
   align-self: flex-start;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
  }
  
 .recommendation-box {
@@ -82,10 +82,14 @@
 
 .tabs {
  width: 100%;
- height: 4rem;
+ height: 3rem;
  gap: 1rem;
  overflow-x: auto;
  margin-top: 1rem;
+}
+
+.tabs::-webkit-scrollbar {
+ display: none;
 }
 
 .tabs button {
@@ -93,8 +97,16 @@
  min-width: 6rem;
  height: 2.5rem;
  color: var(--text-color);
- font-family: Nunito;
+ font-family: 'Nunito Sans';
+ font-size: 1.040rem;
  background-color: transparent;
  border: none;
  border-radius: .8rem;
+ transition: 200ms;
+}
+
+.tabs .active {
+ color: rgb(240, 240, 240);
+ background-color: var(--sclr);
+ transition: 200ms;
 }
