--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,12 @@ h4 {
  justify-content: center;
 }
 
+.flex-start {
+ display: flex;
+ align-items: center;
+ justify-content: flex-start;
+}
+
 .flex-col-center {
  display: flex;
  flex-direction: column;
