--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -56,17 +56,19 @@
 .mySwiper .swiper-slide {
   width: 12rem;
   height: 16.5rem;
-  background-color: var(--shade);
-  border-radius: 1rem;
-  transition: all 0.3s ease-in-out;
-  opacity: 0.5;
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0.5;
+  filter: blur(3px);
+  background-color: var(--shade);
+  border-radius: 1rem;
+  transition: all 0.3s ease-in-out;
 }
 
 .mySwiper .swiper-slide-active {
   transform: scale(1.1);
+  filter: blur(0px);
   opacity: 1;
 }
 
@@ -122,6 +124,13 @@
  height: 100%;
  background-color: var(--bg-color);
  border-radius: 0.8rem;
+ filter: opacity(1);
+ 
+ & img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.8rem;
+ }
 }
 
 .bookInfo {
@@ -130,5 +139,14 @@
  display: flex;
  flex-direction: column;
  align-items: flex-start;
+ justify-content: space-between;
  padding: .5rem 0;
+}
+
+.bookInfo h4 {
+ display: -webkit-box;
+ -webkit-box-orient: vertical;
+ overflow: hidden;
+ -webkit-line-clamp: 1;
+ text-overflow: ellipsis;
 }
