--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@ h4 {
  align-items: center;
  justify-content: center;
  text-align: center;
- padding: 1rem;
+ padding: 1rem 1rem 2rem 1rem;
  background-color: var(--shade);
  border-radius: 1rem;
  margin: 1rem 0;
@@ -90,6 +90,12 @@ h4 {
  & h2 {
   align-self: center;
   text-align: center;
+ }
+ 
+ & img {
+  width: 100%;
+  height: 100%;
+  margin-top: -1rem;
  }
 }
 
