--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -47,7 +47,7 @@
  
 .mySwiper {
   width: 100%;
-  height: 18rem;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -55,15 +55,44 @@
 
 .mySwiper .swiper-slide {
   width: 12rem;
-  height: 16.5rem;
+  height: 21rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   opacity: 0.5;
   filter: blur(3px);
-  background-color: var(--shade);
+  padding-bottom: .6rem;
   border-radius: 1rem;
   transition: all 0.3s ease-in-out;
+  
+  & div {
+   width: 100%;
+   height: 16.5rem;
+   background-color: var(--shade);
+   border-radius: 1rem;
+   margin-bottom: 1rem;
+  }
+}
+
+.mySwiper .swiper-slide > h3,
+.mySwiper .swiper-slide > p {
+ align-self: flex-start;
+ display: -webkit-box;
+ -webkit-box-orient: vertical;
+ overflow: hidden;
+ -webkit-line-clamp: 1;
+ text-overflow: ellipsis;
+ font-weight: 400;
+}
+
+.mySwiper p:first-of-type {
+ filter: opacity(0.6);
+ margin: .3rem 0;
+}
+.mySwiper span {
+ filter: opacity(0.6);
+ margin-left: .4rem;
 }
 
 .mySwiper .swiper-slide-active {
@@ -77,6 +106,7 @@
  height: 3rem;
  gap: 1rem;
  overflow-x: auto;
+ white-space: nowrap;
  margin-top: 1rem;
 }
 
@@ -84,23 +114,31 @@
  display: none;
 }
 
+
+.tabs {
+  display: flex;
+  overflow-x: auto;  /* Allows horizontal scrolling */
+  white-space: nowrap;  /* Ensures buttons stay in a single line */
+  gap: 0.5rem; /* Space between buttons */
+}
+
 .tabs button {
-  width: auto;
-  min-width: 6.5rem;
+  min-width: 6rem; 
   height: 2.5rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 4rem;
   color: var(--text-color);
   font-family: 'Nunito Sans';
   font-size: 1.040rem;
-  text-align: center;
-  white-space: nowrap;
   background-color: transparent;
   border: none;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   transition: 200ms;
 }
 
 .tabs .active {
- width: auto;
  min-width: 6.5rem;
  color: rgb(240, 240, 240);
  background-color: var(--sclr);
