--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -137,14 +137,16 @@
  transition: 200ms;
 }
 
-.booksWrapper {
+.booksWrapper,
+.bookSkeletonWrapper {
  width: 100%;
  height: auto;
  gap: 1.4rem;
  margin-top: 2rem;
 }
 
-.bookCard {
+.bookCard,
+.bookSkeleton {
  width: 95%;
  height: 10rem;
  padding: 1rem;
@@ -153,7 +155,8 @@
  border-radius: 1rem;
 }
 
-.bookImgWrapper {
+.bookImgWrapper,
+.bookSkeletonImgWrapper {
  width: 9rem;
  height: 100%;
  background-color: var(--bg-color);
@@ -167,7 +170,8 @@
  }
 }
 
-.bookInfo {
+.bookInfo,
+.bookSkeletonInfo {
  width: 60%;
  height: 90%;
  display: flex;
@@ -183,4 +187,11 @@
  overflow: hidden;
  -webkit-line-clamp: 1;
  text-overflow: ellipsis;
+}
+
+.bookSkeletonInfo > span {
+ width: 100%;
+ height: 1.8rem;
+ background-color: var(--bg-color);
+ border-radius: .8rem;
 }
