--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -137,16 +137,14 @@
  transition: 200ms;
 }
 
-.booksWrapper,
-.bookSkeletonWrapper {
+.booksWrapper {
  width: 100%;
  height: auto;
  gap: 1.4rem;
  margin-top: 2rem;
 }
 
-.bookCard,
-.bookSkeleton {
+.bookCard {
  width: 95%;
  height: 10rem;
  padding: 1rem;
@@ -155,8 +153,7 @@
  border-radius: 1rem;
 }
 
-.bookImgWrapper,
-.bookSkeletonImgWrapper {
+.bookImgWrapper {
  width: 9rem;
  height: 100%;
  background-color: var(--bg-color);
@@ -170,8 +167,7 @@
  }
 }
 
-.bookInfo,
-.bookSkeletonInfo {
+.bookInfo {
  width: 60%;
  height: 90%;
  display: flex;
@@ -187,11 +183,4 @@
  overflow: hidden;
  -webkit-line-clamp: 1;
  text-overflow: ellipsis;
-}
-
-.bookSkeletonInfo > span {
- width: 100%;
- height: 1.8rem;
- background-color: var(--bg-color);
- border-radius: .8rem;
 }
