--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,27 @@ h4 {
 /*** essential classes ends ***/
 
 
+.top-bar {
+ width: 100vw;
+ height: 4rem;
+ list-style: none;
+ 
+ & li {
+  padding: 0 5vw;
+ }
+}
+
+.top-bar li:first-of-type {
+ margin-top: .3rem;
+}
+.top-bar li:nth-of-type(2) {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .bookSkeletonWrapper {
  width: 100%;
  height: auto;
