--- a/src/pages/BookPreview/index.css
+++ b/src/pages/BookPreview/index.css
@@ -4,21 +4,36 @@
  align-items: center;
  padding-top: 3rem;
  gap: 1.5rem;
- transform-style: preserve-3d;
- perspective: 800px;
 }
 
 .book-info-img-wrapper {
  width: 13.5rem;
  height: 18.5rem;
  position: relative;
+ border: 0.1rem solid var(--shade);
  border-radius: 1rem;
+ margin-bottom: 2.5rem;
  
  & img {
   width: 100%;
   height: 100%;
   border-radius: 1rem;
  }
+}
+
+.book-info-img-wrapper  a {
+  width: 8rem;
+  height: 3rem;
+  position: absolute;
+  bottom: -2rem;
+  color: rgb(255, 255, 254);
+  text-decoration: none;
+  background-color: var(--sclr);
+  border-radius: .6rem;
+  
+  & span {
+   margin: .3rem 0 0 .4rem;
+  }
 }
 
 
@@ -34,7 +49,7 @@
 }
 
 .book-brief .star-rating {
- letter-spacing: .5rem;
+ letter-spacing: .3rem;
 }
 .book-brief span {
  letter-spacing: normal;
@@ -71,11 +86,54 @@
 .book-about {
  width: 90%;
  height: auto;
- padding: 1rem 5%;
+ padding: 0 5% 1.5rem 5%;
  background-color: var(--shade);
  border-radius: 1rem;
+}
+
+.book-about h3 {
+ margin: 1.4rem 0 .6rem 0;
 }
 
 .book-about p {
  text-align: center;
 }
+
+
+.book-about .subjects-wrapper {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 0.5rem;
+  overflow-x: auto;
+  scrollbar-width: thin;
+  scrollbar-color: var(--bg-color) transparent;
+}
+
+.book-about .subjects-wrapper div {
+  flex: 0 0 auto; 
+  height: 2rem;
+  padding: 0.5rem;
+  border: 0.1rem solid var(--bg-color);
+  border-radius: 0.8rem;
+  white-space: nowrap; 
+}
+
+
+/*
+.book-about .subjects-wrapper {
+ width: 100%;
+ height: auto;
+ flex-wrap: wrap;
+ gap: .5rem;
+ margin-top: 1rem;
+ 
+ & div {
+  width: auto;
+  height: 2rem;
+  padding: .5rem;
+  border: 0.1rem solid var(--bg-color);
+  border-radius: .8rem;
+ }
+}*/
