--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
   --text-color: rgb(240, 240, 240);
   --bg-color: rgb(5, 5, 5);
   --shade: rgb(15, 15, 15);
-  --sclr: rgb(64, 80, 255);
+  --sclr: rgb(64, 90, 255);
+  --sclr2: rgb(250, 40, 190);
 }
 
 
