--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -218,7 +218,7 @@
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-columns: 20vw 60vw 20vw;
+    grid-template-columns: 10vw 60vw 30vw;
     place-items: center; 
   }
 
@@ -226,10 +226,15 @@
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     background-color: var(--shade);
+    
+    & section {
+     align-self: flex-start;
+    }
   }
+ 
 
   .home-main > section {
     width: 100%;
