--- a/src/App.css
+++ b/src/App.css
@@ -90,9 +90,15 @@ h4 {
 
 /* general loader codes start here **/
 .loader {
+  width: 100%;
+  height: 80vh;
+  position: fixed;
   display: flex;
+  flex-flow: column;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
+ /* background-color: red;*/
 }
 .book-wrapper {
   width: 150px;
@@ -176,7 +182,7 @@ h4 {
 }
 
 .error-box {
- width: 77vw;
+ width: 77%;
  min-height: 18rem;
  height: 100%;
  display: flex;
