--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -122,7 +122,7 @@
 
 .tabs button {
   min-width: 6rem; 
-  height: 2.5rem;
+  height: 2.8rem;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -131,7 +131,7 @@
   font-family: 'Nunito Sans';
   font-size: 1.040rem;
   background-color: transparent;
-  border: none;
+  border: 0.1rem solid var(--shade);
   border-radius: 0.8rem;
   transition: 200ms;
 }
