--- a/src/App.css
+++ b/src/App.css
@@ -109,11 +109,13 @@ h4 {
   width: 100%;
   height: 80vh;
   position: fixed;
+  left: 50%;
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  transform: translateX(-50%);
  /* background-color: red;*/
 }
 .book-wrapper {
