--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ h4 {
 /* general loader codes start here **/
 .loader {
   width: 100%;
-  height: 80vh;
+  height: 95vh;
   position: fixed;
   left: 50%;
   display: flex;
@@ -116,6 +116,8 @@ h4 {
   justify-content: center;
   gap: 1rem;
   transform: translateX(-50%);
+  backdrop-filter: blur(6px);
+  z-index: 20;
  /* background-color: red;*/
 }
 .book-wrapper {
@@ -278,7 +280,19 @@ footer ul {
    flex-direction: column;
    align-items: center;
    list-style: none;
-   gap: 2rem;
+   gap: 1rem;
    margin-top: 1rem;
+   
+   & li {
+    width: 74%;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0 5%;
+    gap: 1rem;
+    background-color: var(--bg-color);
+    border-radius: 1rem;
+   }
  }
 }
