--- a/src/pages/Landing/index.css
+++ b/src/pages/Landing/index.css
@@ -93,7 +93,7 @@ section > div .feature-tag {
  align-items: center;
  justify-content: center;
  padding: 0 1rem;
- background-color: rgb(64, 100, 255);
+ background-color: rgba(64, 100, 255, 0.5);
  border-radius: .5rem;
  margin-bottom: 1rem;
 }
