--- a/src/pages/Search/index.css
+++ b/src/pages/Search/index.css
@@ -40,7 +40,7 @@
   background-color: transparent;
   border: none;
   outline: none;
-  font-size: 1rem;
+  font-size: .9rem;
   font-family: 'Nunito Sans', Sans-Serif;
   color: var(--text-color);
   padding-right: 2.5rem;
@@ -66,15 +66,20 @@ main {
 
 .searched-terms-box {
  width: 90%;
- height: auto;
+ height: 2.4rem;
  display: flex;
  flex-direction: column;
  padding: 0 5%;
  border-bottom: 0.080rem solid var(--shade);
+ transition: 200ms;
+ overflow: hidden;
 }
-.searched-terms-box > p {
+
+.show-searched-terms {
+ width: 100%;
  text-transform: uppercase;
 }
+
 
 .searched-terms {
  width: 100%;
