--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -250,6 +250,7 @@
     flex-direction: column;
     align-items: center;
     overflow-y: auto;
+    overflow-x: hidden;
   }
   
   .home-main > section::-webkit-scrollbar ,
