--- a/src/pages/Search/index.css
+++ b/src/pages/Search/index.css
@@ -1,13 +1,21 @@
+section {
+  width: 90%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ padding-inline: 5%;
+}
 .search-bar {
- width: 90%; 
+ width: 92%; 
  height: 4rem;
  position: absolute;
- padding: .5rem 5%;
+ padding: .5rem 4%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--bg-color);
  border-bottom: 0.1rem solid var(--shade);
+ z-index: 10;
 }
 
 .search-bar > span {
@@ -155,12 +163,11 @@
 }
 
 .search-result {
- width: 100%;
+ width: 95%;
  display: flex;
  flex-direction: column;
  align-items: center;
- gap: 1rem;
- background-color: green;
+ margin-block: 1rem 3rem;
 }
 
 
@@ -172,6 +179,18 @@
  }
  
  .searched-terms-box {
-  margin: 5rem;
+  height: 10rem;
+  margin-top: 5rem;
+  z-index: 50;
+ }
+ 
+ .search-result {
+  width: 100%;
+  height: 60%;
+  display: flex;
+ flex-direction: column;
+ align-items: center;
+  align-self: flex-end;
+  background-color: green;
  }
 }
