--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,10 @@ h4 {
 .top-bar {
  width: 100vw;
  height: 4rem;
+ position: fixed;
+ background-color: var(--bg-color);
  list-style: none;
+ z-index: 10;
  
  & li {
   padding: 0 5vw;
