--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -13,6 +13,7 @@
   height: 2.1rem;
   object-fit: cover;
   object-position: center;
+  border: .1rem solid var(--shade);
   border-radius: 50%;
   margin-left: 1.4rem;
   
@@ -220,26 +221,26 @@
   }
   
   .home-main {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    display: grid;
-    grid-template-columns: 15vw 60vw 25vw;
-    place-items: center; 
+   width: 100vw;
+   height: 100vh;
+   position: fixed;
+   display: grid;
+   grid-template-columns: 15vw 60vw 25vw;
+   place-items: center; 
   }
 
   .home-main > aside {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    overflow-y: auto;
-    background-color: var(--shade);
+   width: 100%;
+   height: 100%;
+   display: flex;
+   align-items: flex-start;
+   justify-content: center;
+   overflow-y: auto;
+   background-color: var(--shade);
     
-    & section {
-     align-self: flex-start;
-    }
+   & section {
+    align-self: flex-start;
+   }
   }
   
 
