--- a/src/pages/BookPreview/index.css
+++ b/src/pages/BookPreview/index.css
@@ -121,6 +121,7 @@
  height: auto;
  padding: 0 5% 1.5rem 5%;
  background-color: var(--shade);
+ transition: .2s;
  border-radius: 1rem;
 }
 
@@ -129,10 +130,57 @@
 }
 
 .book-about p {
+ position: relative;
+ display: -webkit-box;
+ -webkit-box-orient: vertical;
+ -webkit-line-clamp: 10;
+ text-align: center;
+ text-overflow: ellipsis;
+ word-break: break-word;
+ overflow: hidden;
+}
+
+.book-about p::after {
+ content: "";
+ position: absolute;
+ bottom: 0;
+ right: 0;
+ width: 100%;
+ height: 30%;
+ background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
+ pointer-events: none;
+}
+
+.book-about .show-full-desc {
+ position: relative;
+ display: block;
  text-align: center;
  word-break: break-word;
 }
+.book-about .show-full-desc::after {
+ content: "";
+ position: absolute;
+ bottom: 0;
+ right: 0;
+ width: 100%;
+ background: transparent;
+}
 
+.toggle-desc {
+ width: auto;
+ height: 3.4rem;
+ color: var(--text-color);
+ font-family: 'Nunito Sans';
+ padding-inline: 1.4rem;
+ background-color: var(--shade);
+ border: .1rem solid var(--shade);
+ border-radius: 2rem;
+}
+
+.toggle-desc span {
+ margin-top: .2rem;
+ margin-left: .5rem;
+}
 
 .book-about .subjects-wrapper {
   width: 100%;
