--- a/src/pages/Favourite/index.css
+++ b/src/pages/Favourite/index.css
@@ -92,11 +92,15 @@
 
 .clicked-book-modal button {
  width: 100%;
- height: 3.5rem;
+ height: 3rem;
  background-color: red;
  border: .1rem solid red;
  border-radius: 1rem;
- margin-top: 1rem;
+ margin-top: .8rem;
+}
+.clicked-book-modal button span {
+ margin-top: .3rem;
+ margin-right: .5rem;
 }
 
 .clicked-book-img {
@@ -106,11 +110,30 @@
  border-radius: .8rem;
 }
 
+
 .clicked-book-info {
  display: flex;
  flex-direction: column;
  gap: .5rem;
 }
+
+.clicked-book-info h3 {
+ display: -webkit-box;
+ -webkit-box-orient: vertical;
+ -webkit-line-clamp: 2;
+ overflow: hidden;
+ text-overflow: ellipsis;
+}
+
+.clicked-book-info div {
+ width: 3rem;
+ font-size: .8rem;
+ padding: .5rem 1rem;
+ background-color: var(--bg-color);
+ border-radius: 2rem;
+ margin-top: .5rem;
+}
+
 .clicked-book-info button {
  width: 8rem;
  height: 2.5rem;
@@ -121,18 +144,37 @@
 
 
 
+
+
 @media (min-width: 726px) {
  .favourite-books-container {
-   width: 90%;
-   height: calc(100vh - 8rem);
-   display: grid;
-   grid-template-rows: repeat(auto-fit, auto);
-   grid-template-columns: repeat(auto-fit, 8rem);
-   grid-auto-flow: row;
-   grid-auto-rows: 12rem;
-   grid-row-gap: 1rem;
-   padding: 6rem 0 6rem 0;
-   justify-content: center;
-   overflow-y: auto;
+  width: 90%;
+  height: calc(100vh - 8rem);
+  display: grid;
+  grid-template-rows: repeat(auto-fit, auto);
+  grid-template-columns: repeat(auto-fit, 8rem);
+  grid-gap: 1rem 1.5rem;
+  padding: 6rem 0 6rem 0;
+  justify-content: center;
+  overflow-y: auto;
+ }
+ 
+ .favourite-books {
+  width: 100%;
+  margin-bottom: .8rem;
+ }
+ .favourite-books > div {
+  height: 10rem;
+ }
+ 
+ 
+ .clicked-book-modal-wrapper {
+  width: 80%;
+ }
+ .clicked-book-modal {
+  padding-bottom: 1rem;
+ }
+ .clicked-book-modal > div {
+  justify-content: flex-start;
  }
 }
