--- a/src/pages/Signup/index.css
+++ b/src/pages/Signup/index.css
@@ -1,4 +1,4 @@
-.signup-container {
+.auth-container {
  width: 100%;
  height: 92vh;
  overflow: hidden;
@@ -6,9 +6,9 @@
  margin-bottom: 0;
 }
 
-.signup-container > div {
+.auth-container > div {
  width: 100%;
- height: 17rem;
+ height: 18rem;
  display: flex;
  flex-direction: column;
  align-items: center;
@@ -16,7 +16,7 @@
  gap: 1rem;
 }
 
-.signup-container > div div {
+.auth-container > div div {
  width: 6.5rem;
  height: 6rem;
  font-size: 3rem;
@@ -24,7 +24,7 @@
  border-radius: 1.2rem;
 }
 
-.signup-form {
+.auth-form {
  width: 80%;
  min-height: 20rem;
  position: absolute;
@@ -34,7 +34,7 @@
  border-radius: 1.2rem;
 }
 
-.signup-form > .oauth {
+.auth-form > .oauth {
  width: 100%;
  height: 3.2rem;
  background-color: rgba(255, 255, 255, 0.05);
@@ -43,22 +43,22 @@
  margin-block: 1rem 1.8rem;
 }
 
-.signup-form > input {
+.auth-form > input {
  width: 90%;
  height: 3.2rem;
- padding: 0 5%;
  color: var(--text-color);
+ font-family: 'Nunito Sans';
  background-color: transparent;
  border: transparent;
  border-bottom: .080rem solid var(--bg-color);
  margin-bottom: .5rem;
- transition: .2s;
+ transition: .4s;
 }
-.signup-form > input:focus {
+.auth-form > input:focus {
  border-bottom: .080rem solid var(--sclr);
 }
 
-.signup-button {
+.auth-button {
  width: 100%;
  height: 3.4rem;
  font-size: 1.1rem;
@@ -68,11 +68,11 @@
  margin-block: 1rem;
 }
 
-.signup-button + p {
+.auth-button + p {
  text-align: center;
  color: rgb(200, 200, 200);
 }
-.signup-button + p a {
+.auth-button + p a {
  color: rgb(160, 160, 160);
  font-weight: bolder;
 }
