--- a/src/pages/Signup/index.css
+++ b/src/pages/Signup/index.css
@@ -43,8 +43,8 @@
  margin-block: 1rem 1.8rem;
 }
 
-.auth-form > input {
- width: 90%;
+.auth-form input {
+ width: 100%;
  height: 3.2rem;
  color: var(--text-color);
  font-family: 'Nunito Sans';
@@ -58,6 +58,18 @@
  border-bottom: .080rem solid var(--sclr);
 }
 
+.password-input {
+ height: 3.2rem;
+ position: relative;
+}
+.password-input button {
+ position: absolute;
+ top: 20%;
+ right: 0;
+ background-color: transparent;
+ border: none;
+}
+
 .auth-button {
  width: 100%;
  height: 3.4rem;
@@ -65,7 +77,12 @@
  background-color: var(--sclr);
  border: none;
  border-radius: .8rem;
+ transition: .2s;
  margin-block: 1rem;
+}
+
+.disabled-button {
+ background-color: rgb(100, 100, 100);
 }
 
 .auth-button + p {
