--- a/src/pages/Setting/index.css
+++ b/src/pages/Setting/index.css
@@ -6,6 +6,18 @@
  padding: 1rem 5%;
 }
 
+.setting-username {
+ width: 90%;
+ height: 4rem;
+ display: flex;
+ align-items: center;
+ justify-content: flex-start;
+ padding: .5rem 5%;
+ background-color: var(--shade);
+ border-bottom: .1rem solid var(--shade);
+ border-radius: 1rem;
+}
+
 .actions-container {
  width: 100%;
  display: flex;
@@ -53,13 +65,12 @@
 
 .current-action-modal-wrapper + form {
  width: 90%;
- min-height: 14rem;
  position: fixed;
  bottom: 0;
  display: flex;
  flex-direction: column;
  padding: 1.2rem 5%;
- padding-bottom: 2rem;
+ padding-bottom: 6rem;
  background-color: var(--shade);
  border-top: .1rem solid var(--bg-color);
  border-top-left-radius: 1.2rem;
@@ -69,6 +80,24 @@
 
 .current-action-modal-wrapper + form > h2 {
  margin-bottom: .5rem;
+}
+
+.new-username-input {
+ width: 92%;
+ height: 3.5rem;
+ padding-inline: 4%;
+ background-color: transparent;
+ border: .080rem solid var(--bg-color);
+ border-radius: .8rem;
+ margin-block: 1.5rem;
+}
+.save-username-btn {
+ width: 100%;
+ height: 3.5rem;
+ color: rgb(245, 245, 245);
+ background-color: var(--sclr);
+ border: none;
+ border-radius: .8rem;
 }
 
 .signout-buttons {
@@ -91,12 +120,17 @@
 
 
 @media (min-width: 726px) {
- .actions-container {
-  margin-top: 6rem;
+ .setting-username {
+  margin-top: 4rem;
  }
  
  .current-action-modal-wrapper {
   width: 84vw;
   right: 0;
+ }
+ .current-action-modal-wrapper + form {
+  width: 74vw;
+  right: 0;
+  padding-bottom: 1rem;
  }
 }
