--- a/src/pages/Setting/index.css
+++ b/src/pages/Setting/index.css
@@ -32,6 +32,19 @@
  margin-right: .5rem;
 }
 
+.setting-user-modal > .unverified-bar {
+ padding: .6rem 2.8%;
+ background-color: rgba(250, 250, 0, .3);
+ border: .050rem solid rgb(240, 240, 0);
+ margin-top: -.3rem;
+}
+.setting-user-modal > .verified-bar {
+ padding: .6rem 2.8%;
+ background-color: rgba(0, 200, 0, .3);
+ border: .050rem solid rgb(0, 240, 0);
+ margin-top: -.3rem;
+}
+
 .setting-genres {
  width: 100%;
  display: flex;
