--- a/src/pages/Signup/index.css
+++ b/src/pages/Signup/index.css
@@ -38,7 +38,7 @@
 .auth-form > .oauth {
  width: 100%;
  height: 3.2rem;
- background-color: rgba(255, 255, 255, 0.05);
+ background-color: var(--bg-color); /* rgba(255, 255, 255, 0.05);*/
  border: .060rem solid rgba(255, 255, 255, 0.090);
  border-radius: .8rem;
  margin-block: 1rem 1.8rem;
